完成rm、mv、添加预编译命令，方便调试，基本完结

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "cstdio": "c",
         "*.tcc": "c",
         "limits": "c",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "typeinfo": "c"
     }
 }
